[tool.poetry]
name = "vimgpt"
version = "0.1.1"
description = "LLM agent with direct Vim access using neovim/pynvim"
authors = ["nsbradford <nsbradford@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "0.28.0"
pynvim = "0.4.3"
ruff = "^0.0.287"
black = "^23.7.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vimgpt_demo_headless = "vimgpt.demo_headless:main"
vimgpt_demo_attached = "vimgpt.demo_attached:main"

[tool.ruff]
# Same as Black.
# line-length = 88
target-version = "py311"

select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]

ignore = [
    "E712",  # Allow using if x == False, as it's not always equivalent to if x.
    "E501",  # Supress line-too-long warnings: trust black's judgement on this one.
]

exclude = [
 'stubs',
]

[tool.mypy]
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = 'pynvim.*'
ignore_errors = true

# [[tool.mypy.overrides]]
# module = 'vimgpt.*'
# ignore_missing_imports = true
